Create scalahost sbt plugin, fixes #673. (#683)
* Create scalahost sbt plugin, fixes #673.

- Injects scalahost compiler plugin for 2.11/2.12 projects
- Ignores 2.10 projects
- Defaults to build version.value, but possible to override with -Dscalahost.version
- Possible to use local assembly jar for fast iteration speeds during development.

* Add scripted tests for sbt-scalahost.

- Setup sbt-doge to run commands for all crossScalaVersions
- Remove matrix build in drone in favor of testing all cross versions in
  a single build, since scripted tests require both 2.11 and 2.12
  locally published artifacts.
- Add `testAll` command to run all tests across all crossScalaVersions in CI

* Address review feedback

* Clean up scalahost-sbt scripted tests.

- scalahostSbt/testQuick runs scripted tests for 2.11 only
- scalahostSbt/test runs full scripted tests

* Return error exit code on scalahostSbt/test error

* Only run simple211 scripted test

* Automatically upgrade scalaVersio, fixes #681

* Manually put -Xplugin:scalahost.jar to avoid duplicate warning